--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,10 @@ on:
     tags:
       - '*.*.*'
 
+permissions:
+    contents: write
+    packages: write
+
 name: Release 
 jobs:
   goreleaser:
@@ -12,15 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - uses: actions/checkout@v3
+      - uses: wangyoucao577/go-release-action@v1
         with:
-          go-version: 1.20
-
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v4
-        with:
-          args: release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: linux
+          goarch: amd64
+          goversion: "https://dl.google.com/go/go1.20.7.linux-amd64.tar.gz"
+          binary_name: "lynis_exporter"
 
